--- a/CapstoneProject/CapstoneProject.csproj
+++ b/CapstoneProject/CapstoneProject.csproj
@@ -16,10 +16,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Twilio" Version="5.59.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
 
 </Project>
